Code/syntax.output
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList
   13           | VarDec error

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT OptTag LC error RC

   19 OptTag: ID
   20       | ε

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB
   25       | VarDec LB error

   26 FunDec: ID LP VarList RP
   27       | ID LP RP
   28       | ID LP error RP
   29       | error LP VarList RP

   30 VarList: ParamDec COMMA VarList
   31        | ParamDec
   32        | ParamDec error VarList

   33 ParamDec: Specifier VarDec

   34 CompSt: LC DefList StmtList RC
   35       | LC error RC

   36 StmtList: Stmt StmtList
   37         | ε

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt1 ELSE Stmt
   42     | IF LP Exp RP Stmt
   43     | WHILE LP Exp RP Stmt
   44     | error SEMI
   45     | Exp error

   46 Stmt1: Exp SEMI
   47      | CompSt
   48      | RETURN Exp SEMI
   49      | IF LP Exp RP Stmt1 ELSE Stmt1
   50      | WHILE LP Exp RP Stmt1
   51      | error SEMI
   52      | Exp error

   53 DefList: Def DefList
   54        | ε

   55 Def: Specifier DecList SEMI
   56    | Specifier error SEMI

   57 DecList: Dec
   58        | Dec COMMA DecList
   59        | Dec error DecList
   60        | Dec error

   61 Dec: VarDec
   62    | VarDec ASSIGNOP Exp
   63    | VarDec ASSIGNOP error

   64 Exp: Exp ASSIGNOP Exp
   65    | Exp AND Exp
   66    | Exp OR Exp
   67    | Exp RELOP Exp
   68    | Exp PLUS Exp
   69    | Exp MINUS Exp
   70    | Exp STAR Exp
   71    | Exp DIV Exp
   72    | LP Exp RP
   73    | MINUS Exp
   74    | NOT Exp
   75    | ID LP Args RP
   76    | ID LP RP
   77    | Exp LB Exp RB
   78    | Exp DOT ID
   79    | ID
   80    | INT
   81    | FLOAT
   82    | Exp ASSIGNOP error
   83    | Exp AND error
   84    | Exp OR error
   85    | Exp RELOP error
   86    | Exp PLUS error
   87    | Exp MINUS error
   88    | Exp STAR error
   89    | Exp DIV error
   90    | LP error RP
   91    | MINUS error
   92    | NOT error
   93    | ID LP error RP
   94    | Exp LB error RB

   95 Args: Exp COMMA Args
   96     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 12 13 18 24 25 28 29 32 35 44 45 51 52 56 59 60 63 82 83 84 85 86 87 88 89 90 91 92 93 94
    IF <node> (258) 41 42 49
    ELSE <node> (259) 41 49
    WHILE <node> (260) 43 50
    RETURN <node> (261) 40 48
    STRUCT <node> (262) 16 17 18
    TYPE <node> (263) 14
    INT <node> (264) 23 80
    FLOAT <node> (265) 81
    ID <node> (266) 19 21 22 26 27 28 75 76 78 79 93
    LC <node> (267) 16 18 34 35
    RC <node> (268) 16 18 34 35
    SEMI <node> (269) 4 5 7 8 38 40 44 46 48 51 55 56
    COMMA <node> (270) 11 30 58 95
    ASSIGNOP <node> (271) 62 63 64 82
    OR <node> (272) 66 84
    AND <node> (273) 65 83
    RELOP <node> (274) 67 85
    PLUS <node> (275) 68 86
    MINUS <node> (276) 69 73 87 91
    STAR <node> (277) 70 88
    DIV <node> (278) 71 89
    NOT <node> (279) 74 92
    LP <node> (280) 26 27 28 29 41 42 43 49 50 72 75 76 90 93
    RP <node> (281) 26 27 28 29 41 42 43 49 50 72 75 76 90 93
    LB <node> (282) 23 24 25 77 94
    RB <node> (283) 23 24 77 94
    DOT <node> (284) 78


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Program <node> (31)
        on left: 1
        on right: 0
    ExtDefList <node> (32)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (33)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <node> (34)
        on left: 10 11 12 13
        on right: 4 11 12
    Specifier <node> (35)
        on left: 14 15
        on right: 4 5 6 7 9 33 55 56
    StructSpecifier <node> (36)
        on left: 16 17 18
        on right: 15
    OptTag <node> (37)
        on left: 19 20
        on right: 16 18
    Tag <node> (38)
        on left: 21
        on right: 17
    VarDec <node> (39)
        on left: 22 23 24 25
        on right: 10 11 12 13 23 24 25 33 61 62 63
    FunDec <node> (40)
        on left: 26 27 28 29
        on right: 6 7
    VarList <node> (41)
        on left: 30 31 32
        on right: 26 29 30 32
    ParamDec <node> (42)
        on left: 33
        on right: 30 31 32
    CompSt <node> (43)
        on left: 34 35
        on right: 6 39 47
    StmtList <node> (44)
        on left: 36 37
        on right: 34 36
    Stmt <node> (45)
        on left: 38 39 40 41 42 43 44 45
        on right: 36 41 42 43
    Stmt1 <node> (46)
        on left: 46 47 48 49 50 51 52
        on right: 41 49 50
    DefList <node> (47)
        on left: 53 54
        on right: 16 34 53
    Def <node> (48)
        on left: 55 56
        on right: 53
    DecList <node> (49)
        on left: 57 58 59 60
        on right: 55 58 59
    Dec <node> (50)
        on left: 61 62 63
        on right: 57 58 59 60
    Exp <node> (51)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 38 40 41 42 43 45 46 48 49 50 52 62 64 65 66 67 68 69 70 71 72 73 74 77 78 82 83 84 85 86 87 88 89 94 95 96
    Args <node> (52)
        on left: 95 96
        on right: 75 95


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   16 StructSpecifier: STRUCT • OptTag LC DefList RC
   17                | STRUCT • Tag
   18                | STRUCT • OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   14 Specifier: TYPE •

    $default  reduce using rule 14 (Specifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI
    9       | Specifier • error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   15 Specifier: StructSpecifier •

    $default  reduce using rule 15 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   19 OptTag: ID •
   21 Tag: ID •

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 11

   16 StructSpecifier: STRUCT OptTag • LC DefList RC
   18                | STRUCT OptTag • LC error RC

    LC  shift, and go to state 21


State 12

   17 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 17 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

    9 ExtDef: Specifier error •
   29 FunDec: error • LP VarList RP

    LP  shift, and go to state 22

    $default  reduce using rule 9 (ExtDef)


State 16

   22 VarDec: ID •
   26 FunDec: ID • LP VarList RP
   27       | ID • LP RP
   28       | ID • LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 22 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   12           | VarDec • error ExtDecList
   13           | VarDec • error
   23 VarDec: VarDec • LB INT RB
   24       | VarDec • LB error RB
   25       | VarDec • LB error

    error  shift, and go to state 25
    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    SEMI  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    LC    shift, and go to state 28
    SEMI  shift, and go to state 29

    CompSt  go to state 30


State 21

   16 StructSpecifier: STRUCT OptTag LC • DefList RC
   18                | STRUCT OptTag LC • error RC

    error   shift, and go to state 31
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 54 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   29 FunDec: error LP • VarList RP

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 23

   26 FunDec: ID LP • VarList RP
   27       | ID LP • RP
   28       | ID LP • error RP

    error   shift, and go to state 38
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    RP      shift, and go to state 39

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 25

   12 ExtDecList: VarDec error • ExtDecList
   13           | VarDec error •

    ID  shift, and go to state 41

    $default  reduce using rule 13 (ExtDecList)

    ExtDecList  go to state 42
    VarDec      go to state 19


State 26

   11 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 43
    VarDec      go to state 19


State 27

   23 VarDec: VarDec LB • INT RB
   24       | VarDec LB • error RB
   25       | VarDec LB • error

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 28

   34 CompSt: LC • DefList StmtList RC
   35       | LC • error RC

    error   shift, and go to state 46
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 54 (DefList)]
    IF      reduce using rule 54 (DefList)
    WHILE   reduce using rule 54 (DefList)
    RETURN  reduce using rule 54 (DefList)
    INT     reduce using rule 54 (DefList)
    FLOAT   reduce using rule 54 (DefList)
    ID      reduce using rule 54 (DefList)
    LC      reduce using rule 54 (DefList)
    RC      reduce using rule 54 (DefList)
    MINUS   reduce using rule 54 (DefList)
    NOT     reduce using rule 54 (DefList)
    LP      reduce using rule 54 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 34


State 29

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 30

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 31

   18 StructSpecifier: STRUCT OptTag LC error • RC

    RC  shift, and go to state 48


State 32

   55 Def: Specifier • DecList SEMI
   56    | Specifier • error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 41

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 33

   16 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 53


State 34

   53 DefList: Def • DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 54 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 34


State 35

   33 ParamDec: Specifier • VarDec

    ID  shift, and go to state 41

    VarDec  go to state 55


State 36

   29 FunDec: error LP VarList • RP

    RP  shift, and go to state 56


State 37

   30 VarList: ParamDec • COMMA VarList
   31        | ParamDec •
   32        | ParamDec • error VarList

    error  shift, and go to state 57
    COMMA  shift, and go to state 58

    RP  reduce using rule 31 (VarList)


State 38

   28 FunDec: ID LP error • RP

    RP  shift, and go to state 59


State 39

   27 FunDec: ID LP RP •

    $default  reduce using rule 27 (FunDec)


State 40

   26 FunDec: ID LP VarList • RP

    RP  shift, and go to state 60


State 41

   22 VarDec: ID •

    $default  reduce using rule 22 (VarDec)


State 42

   12 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 12 (ExtDecList)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 44

   24 VarDec: VarDec LB error • RB
   25       | VarDec LB error •

    RB  shift, and go to state 61

    $default  reduce using rule 25 (VarDec)


State 45

   23 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 62


State 46

   35 CompSt: LC error • RC

    RC  shift, and go to state 63


State 47

   34 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67
    INT     shift, and go to state 68
    FLOAT   shift, and go to state 69
    ID      shift, and go to state 70
    LC      shift, and go to state 28
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 75
    Stmt      go to state 76
    Exp       go to state 77


State 48

   18 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 18 (StructSpecifier)


State 49

   56 Def: Specifier error • SEMI

    SEMI  shift, and go to state 78


State 50

   23 VarDec: VarDec • LB INT RB
   24       | VarDec • LB error RB
   25       | VarDec • LB error
   61 Dec: VarDec •
   62    | VarDec • ASSIGNOP Exp
   63    | VarDec • ASSIGNOP error

    ASSIGNOP  shift, and go to state 79
    LB        shift, and go to state 27

    $default  reduce using rule 61 (Dec)


State 51

   55 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 80


State 52

   57 DecList: Dec •
   58        | Dec • COMMA DecList
   59        | Dec • error DecList
   60        | Dec • error

    error  shift, and go to state 81
    COMMA  shift, and go to state 82

    SEMI  reduce using rule 57 (DecList)


State 53

   16 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 16 (StructSpecifier)


State 54

   53 DefList: Def DefList •

    $default  reduce using rule 53 (DefList)


State 55

   23 VarDec: VarDec • LB INT RB
   24       | VarDec • LB error RB
   25       | VarDec • LB error
   33 ParamDec: Specifier VarDec •

    LB  shift, and go to state 27

    $default  reduce using rule 33 (ParamDec)


State 56

   29 FunDec: error LP VarList RP •

    $default  reduce using rule 29 (FunDec)


State 57

   32 VarList: ParamDec error • VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 83
    ParamDec         go to state 37


State 58

   30 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 84
    ParamDec         go to state 37


State 59

   28 FunDec: ID LP error RP •

    $default  reduce using rule 28 (FunDec)


State 60

   26 FunDec: ID LP VarList RP •

    $default  reduce using rule 26 (FunDec)


State 61

   24 VarDec: VarDec LB error RB •

    $default  reduce using rule 24 (VarDec)


State 62

   23 VarDec: VarDec LB INT RB •

    $default  reduce using rule 23 (VarDec)


State 63

   35 CompSt: LC error RC •

    $default  reduce using rule 35 (CompSt)


State 64

   44 Stmt: error • SEMI

    SEMI  shift, and go to state 85


State 65

   41 Stmt: IF • LP Exp RP Stmt1 ELSE Stmt
   42     | IF • LP Exp RP Stmt

    LP  shift, and go to state 86


State 66

   43 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 87


State 67

   40 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 88


State 68

   80 Exp: INT •

    $default  reduce using rule 80 (Exp)


State 69

   81 Exp: FLOAT •

    $default  reduce using rule 81 (Exp)


State 70

   75 Exp: ID • LP Args RP
   76    | ID • LP RP
   79    | ID •
   93    | ID • LP error RP

    LP  shift, and go to state 89

    $default  reduce using rule 79 (Exp)


State 71

   73 Exp: MINUS • Exp
   91    | MINUS • error

    error  shift, and go to state 90
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 91


State 72

   74 Exp: NOT • Exp
   92    | NOT • error

    error  shift, and go to state 92
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 93


State 73

   72 Exp: LP • Exp RP
   90    | LP • error RP

    error  shift, and go to state 94
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 95


State 74

   39 Stmt: CompSt •

    $default  reduce using rule 39 (Stmt)


State 75

   34 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 96


State 76

   36 StmtList: Stmt • StmtList

    error   shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67
    INT     shift, and go to state 68
    FLOAT   shift, and go to state 69
    ID      shift, and go to state 70
    LC      shift, and go to state 28
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 97
    Stmt      go to state 76
    Exp       go to state 77


State 77

   38 Stmt: Exp • SEMI
   45     | Exp • error
   64 Exp: Exp • ASSIGNOP Exp
   65    | Exp • AND Exp
   66    | Exp • OR Exp
   67    | Exp • RELOP Exp
   68    | Exp • PLUS Exp
   69    | Exp • MINUS Exp
   70    | Exp • STAR Exp
   71    | Exp • DIV Exp
   77    | Exp • LB Exp RB
   78    | Exp • DOT ID
   82    | Exp • ASSIGNOP error
   83    | Exp • AND error
   84    | Exp • OR error
   85    | Exp • RELOP error
   86    | Exp • PLUS error
   87    | Exp • MINUS error
   88    | Exp • STAR error
   89    | Exp • DIV error
   94    | Exp • LB error RB

    error     shift, and go to state 98
    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 100
    OR        shift, and go to state 101
    AND       shift, and go to state 102
    RELOP     shift, and go to state 103
    PLUS      shift, and go to state 104
    MINUS     shift, and go to state 105
    STAR      shift, and go to state 106
    DIV       shift, and go to state 107
    LB        shift, and go to state 108
    DOT       shift, and go to state 109


State 78

   56 Def: Specifier error SEMI •

    $default  reduce using rule 56 (Def)


State 79

   62 Dec: VarDec ASSIGNOP • Exp
   63    | VarDec ASSIGNOP • error

    error  shift, and go to state 110
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 111


State 80

   55 Def: Specifier DecList SEMI •

    $default  reduce using rule 55 (Def)


State 81

   59 DecList: Dec error • DecList
   60        | Dec error •

    ID  shift, and go to state 41

    $default  reduce using rule 60 (DecList)

    VarDec   go to state 50
    DecList  go to state 112
    Dec      go to state 52


State 82

   58 DecList: Dec COMMA • DecList

    ID  shift, and go to state 41

    VarDec   go to state 50
    DecList  go to state 113
    Dec      go to state 52


State 83

   32 VarList: ParamDec error VarList •

    $default  reduce using rule 32 (VarList)


State 84

   30 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 30 (VarList)


State 85

   44 Stmt: error SEMI •

    $default  reduce using rule 44 (Stmt)


State 86

   41 Stmt: IF LP • Exp RP Stmt1 ELSE Stmt
   42     | IF LP • Exp RP Stmt

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 114


State 87

   43 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 115


State 88

   40 Stmt: RETURN Exp • SEMI
   64 Exp: Exp • ASSIGNOP Exp
   65    | Exp • AND Exp
   66    | Exp • OR Exp
   67    | Exp • RELOP Exp
   68    | Exp • PLUS Exp
   69    | Exp • MINUS Exp
   70    | Exp • STAR Exp
   71    | Exp • DIV Exp
   77    | Exp • LB Exp RB
   78    | Exp • DOT ID
   82    | Exp • ASSIGNOP error
   83    | Exp • AND error
   84    | Exp • OR error
   85    | Exp • RELOP error
   86    | Exp • PLUS error
   87    | Exp • MINUS error
   88    | Exp • STAR error
   89    | Exp • DIV error
   94    | Exp • LB error RB
